[gd_scene load_steps=6 format=2]

[ext_resource path="res://CombatSystem/Battler/Animation/BattlerAnim.gd" type="Script" id=1]
[ext_resource path="res://CombatSystem/Battler/Animation/attack.anim" type="Animation" id=2]
[ext_resource path="res://CombatSystem/Battler/Animation/death.anim" type="Animation" id=3]
[ext_resource path="res://CombatSystem/Battler/Animation/take_damage.anim" type="Animation" id=4]
[ext_resource path="res://CombatSystem/Battler/Animation/appear.anim" type="Animation" id=5]

[node name="BattlerAnim" type="Position2D"]
script = ExtResource( 1 )

[node name="Pivot" type="Position2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
anims/appear = ExtResource( 5 )
anims/attack = ExtResource( 2 )
anims/death = ExtResource( 3 )
anims/take_damage = ExtResource( 4 )

[node name="FrontAnchor" type="Position2D" parent="."]
[connection signal="animation_finished" from="Pivot/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
